--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-dom": "18.2.0",
     "slate": "^0.88.1",
     "slate-react": "^0.88.2",
+    "tailwind-merge": "^1.8.1",
     "typescript": "4.9.4"
   },
   "devDependencies": {
