--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@next/font": "13.1.4",
+    "@prezly/slate-lists": "^0.75.1",
     "@types/node": "18.11.18",
     "@types/react": "18.0.27",
     "@types/react-dom": "18.0.10",
@@ -19,6 +20,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "slate": "^0.88.1",
+    "slate-history": "^0.86.0",
     "slate-react": "^0.88.2",
     "tailwind-merge": "^1.8.1",
     "typescript": "4.9.4"
